# prompt-gen-mcp

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_READY.md  Dockerfile  LICENSE  README.md  SECURITY.md  cursor_config.json  pyproject.toml  setup.sh  setup_user.py  technique_report.json  test_techniques_comprehensive.py
src/prompt_gen_mcp/: server.py
